fix : entities